# sec-financials-app

./: .env.example  .gitignore  README.md  REQUIREMENTS.md  pyproject.toml  render.yaml
config/: items.yaml
src/sec_financials/: __init__.py  __main__.py  cli.py  companyfacts.py  config.py  csv_writer.py  extractor.py  pipeline.py  sec_client.py  splits.py  tickers.py  web.py
tests/: test_config.py  test_csv_writer.py  test_extractor.py  test_sec_client.py  test_smoke.py  test_splits.py  test_web.py
