[project]
name = "sec-financials"
version = "0.1.0"
description = "Extract quarterly financial statement data from SEC EDGAR and emit a formatted CSV."
readme = "README.md"
requires-python = ">=3.12"
license = { text = "MIT" }
authors = [{ name = "pdeck" }]

dependencies = [
    "httpx>=0.27",
    "pandas>=2.2",
    "pyyaml>=6.0",
    "jsonschema>=4.21",
    "beautifulsoup4>=4.12",   # for 8-K HTML parsing (used in a later milestone)
    "lxml>=5.1",              # BeautifulSoup backend
    "fastapi>=0.110",
    "uvicorn[standard]>=0.27",
    "python-multipart>=0.0.9", # required by FastAPI for form parsing
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-mock>=3.12",
    "ruff>=0.4",
]

[project.scripts]
sec-financials = "sec_financials.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/sec_financials"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "F",   # pyflakes
    "W",   # pycodestyle warnings
    "I",   # isort
    "B",   # flake8-bugbear
    "UP",  # pyupgrade
]
ignore = []

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra -q"
